--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Archive of Us ❤️</title>
-  <meta name="description" content="A cinematic love letter — our story, written in the stars." />
+  <title>CYROSE's Valentine ❤️</title>
+  <meta name="description" content="A cinematic love letter to CYROSE — our story, written in the stars." />
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💘</text></svg>" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
